# CCOSS

./: .gitignore  B33_ChangeLog.txt  CHANGELOG.md  Constants.h  Credits.txt  Directory.Build.props  Main.cpp  OSX Build Instructions.txt  README.md  RTEA.sln  RTEA.vcxproj  RTEA.vcxproj.filters  RTEA_clang-cl.sln  RTEA_clang-cl.vcxproj  StandardIncludes.h  TargetSxS.h  build_linux.sh  clean_after_build.bat  cpp.hint  meson.build  meson_darwin.ini  meson_options.txt  meson_win.txt  pull_source.bat  run.sh
Activities/: ActorEditor.cpp  ActorEditor.h  AreaEditor.cpp  AreaEditor.h  AssemblyEditor.cpp  AssemblyEditor.h  BaseEditor.cpp  BaseEditor.h  EditorActivity.cpp  EditorActivity.h  GABaseDefense.cpp  GABaseDefense.h  GABrainMatch.cpp  GABrainMatch.h  GAMetaAttack.h  GAScripted.cpp  GAScripted.h  GATutorial.cpp  GATutorial.h  GameActivity.cpp  GameActivity.h  GibEditor.cpp  GibEditor.h  MultiplayerGame.cpp  MultiplayerGame.h  MultiplayerServerLobby.cpp  MultiplayerServerLobby.h  SceneEditor.cpp  SceneEditor.h  meson.build
Entities/: ACDropShip.cpp  ACDropShip.h  ACRocket.cpp  ACRocket.h  ACrab.cpp  ACrab.h  ACraft.cpp  ACraft.h  ADSensor.cpp  ADSensor.h  ADoor.cpp  ADoor.h  AEJetpack.cpp  AEJetpack.h  AEmitter.cpp  AEmitter.h  AHuman.cpp  AHuman.h  Activity.cpp  Activity.h  Actor.cpp  Actor.h  ActorEditor.cpp  AllEntities.h  AreaEditor.cpp  AreaEditor.h  Arm.cpp  Arm.h  AssemblyEditor.cpp  AssemblyEditor.h  Atom.cpp  Atom.h  AtomGroup.cpp  AtomGroup.h  Attachable.cpp  Attachable.h  BaseEditor.cpp  BunkerAssembly.cpp  BunkerAssembly.h  BunkerAssemblyScheme.cpp  (+100 more)
GUI/: AllegroBitmap.cpp  AllegroBitmap.h  AllegroInput.cpp  AllegroInput.h  AllegroScreen.cpp  AllegroScreen.h  CMakeLists.txt  GUI.cpp  GUI.h  GUIBanner.cpp  GUIBanner.h  GUIBitmap.h  GUIButton.cpp  GUIButton.h  GUICheckbox.cpp  GUICheckbox.h  GUICollectionBox.cpp  GUICollectionBox.h  GUIComboBox.cpp  GUIComboBox.h  GUIControl.cpp  GUIControl.h  GUIControlFactory.cpp  GUIControlFactory.h  GUIControlManager.cpp  GUIControlManager.h  GUIEvent.cpp  GUIEvent.h  GUIFont.cpp  GUIFont.h  GUIInput.cpp  GUIInput.h  GUIInterface.h  GUILabel.cpp  GUILabel.h  GUIListBox.cpp  GUIListBox.h  GUIListPanel.cpp  GUIListPanel.h  GUIManager.cpp  (+42 more)
GUI/Editor/: Editor.cpp  GUIEditorApp.cpp  GUIEditorApp.h  GUIEditorLib.cpp  GUIEditorLib.h  Resource.aps  editor.sln  editor.vcproj  editor.vcxproj  editor.vcxproj.filters  main.h  resource.h
GUI/Wrappers/: AllegroScreen.h  GUIInputWrapper.cpp  GUIInputWrapper.h
Lua/: LuaAdapterDefinitions.h  LuaAdapters.cpp  LuaAdapters.h  LuaAdaptersEntities.h  LuaBindDefinitions.h  LuaBindingRegisterDefinitions.h  LuaBindingsActivities.cpp  LuaBindingsActivities.h  LuaBindingsEntities.cpp  LuaBindingsEntities.h  LuaBindingsGUI.cpp  LuaBindingsGUI.h  LuaBindingsInput.cpp  LuaBindingsManagers.cpp  LuaBindingsManagers.h  LuaBindingsMisc.cpp  LuaBindingsMisc.h  LuaBindingsPrimitives.cpp  LuaBindingsSDL.cpp  LuaBindingsSystem.cpp  LuaBindingsSystem.h  LuaEntityAdapters.h  LuaMacros.h  LuabindDefinitions.h  LuabindObjectWrapper.cpp  LuabindObjectWrapper.h  meson.build
Managers/: AchievementMan.cpp  AchievementMan.h  ActivityMan.cpp  ActivityMan.h  AudioMan.cpp  AudioMan.h  CMakeLists.txt  CameraMan.cpp  CameraMan.h  ConsoleMan.cpp  ConsoleMan.h  EntityMan.cpp  EntityMan.h  FrameMan.cpp  FrameMan.h  LicenseMan.cpp  LicenseMan.h  LuaMan.cpp  LuaMan.h  MenuMan.cpp  MenuMan.h  MetaMan.cpp  MetaMan.h  MovableMan.cpp  MovableMan.h  Network.h  NetworkClient.cpp  NetworkClient.h  NetworkMessages.h  NetworkServer.cpp  NetworkServer.h  PerformanceMan.cpp  PerformanceMan.h  PostProcessMan.cpp  PostProcessMan.h  PresetMan.cpp  PresetMan.h  PrimitiveMan.cpp  PrimitiveMan.h  RTEManagers.h  (+13 more)
Menus/: AreaEditorGUI.cpp  AreaEditorGUI.h  AreaPickerGUI.cpp  AreaPickerGUI.h  AssemblyEditorGUI.cpp  AssemblyEditorGUI.h  BuyMenuGUI.cpp  BuyMenuGUI.h  CMakeLists.txt  GibEditorGUI.cpp  GibEditorGUI.h  InventoryGUI.cpp  InventoryGUI.h  InventoryMenuGUI.cpp  InventoryMenuGUI.h  LoadingGUI.cpp  LoadingGUI.h  LoadingScreen.cpp  LoadingScreen.h  MainMenuGUI.cpp  MainMenuGUI.h  MetagameGUI.cpp  MetagameGUI.h  ModManagerGUI.cpp  ModManagerGUI.h  MultiplayerGameGUI.cpp  MultiplayerGameGUI.h  ObjectPickerGUI.cpp  ObjectPickerGUI.h  PauseMenuGUI.cpp  PauseMenuGUI.h  PieMenuGUI.cpp  PieMenuGUI.h  SaveLoadMenuGUI.cpp  SaveLoadMenuGUI.h  ScenarioActivityConfigGUI.cpp  ScenarioActivityConfigGUI.h  ScenarioGUI.cpp  ScenarioGUI.h  SceneEditorGUI.cpp  (+24 more)
Resources/: Config.h.in  Credits.h  Info.plist  RTEA.rc  bundle_dylibs.sh  cccp.desktop  cccp.sh  cccp.xpm  ccicon.icns  generate_mac_os_icon.sh  meson.build  resource.h
System/: AllegroTools.cpp  AllegroTools.h  AlphaBlender.cpp  AlphaBlender.h  Atom.cpp  Atom.h  Box.cpp  Box.h  CMakeLists.txt  Cheeky.c  Color.cpp  Color.h  Config.h.in  Constants.h  ContentFile.cpp  ContentFile.h  Controller.cpp  Controller.h  DDTError.cpp  DDTError.h  DDTTools.cpp  DDTTools.h  DataModule.cpp  DataModule.h  Entity.cpp  Entity.h  GLCheck.cpp  GLCheck.h  GameVersion.h  Gamepad.h  GenericSavedData.cpp  GenericSavedData.h  GraphicalPrimitive.cpp  GraphicalPrimitive.h  InputMapping.cpp  InputMapping.h  InputScheme.cpp  InputScheme.h  Matrix.cpp  Matrix.h  (+39 more)
System/BitMask/: bitmask.c  bitmask.h
System/InterGif/: Copying.txt  animlib.c  animlib.h  colmatch.c  commonpal.c  count.c  count.h  frame.c  frame.h  from.c  fromfile.c  gifdecode.c  gifdecode.h  gifencode.c  gifencode.h  histogram.c  igexample.c  intergif.c  intergif.h  join.c  loadgif.c  loadsprite.c  loadtca.c  mediancut.c  palettemap.c  riemann.c  riemann.h  savegif.c  savesprite.c  split.c  split.h  sprite.h  utils.h  win32.c  workspace.c  workspace.h
System/MD5/: CMakeLists.txt
System/MicroPather/: CMakeLists.txt  micropather.cpp  micropather.h  readme.htm
System/RTTIProperties/: ExtraData.cpp  ExtraData.h  ExtraProp.cpp  ExtraProp.h  LinkLoad.h  Persistent.cpp  Persistent.h  PropDescMap.cpp  PropDescMap.h  PropList.cpp  PropList.h  PropList.inl  PropListLoad.cpp  PropListLoad.h  Properties.cpp  Properties.h  Properties.inl  Property.cpp  Property.h  RTTI.h  (+8 more)
(+167 files in other folders)
