act_inc = include_directories('.')

act_src = files('ActorEditor.cpp',
'AreaEditor.cpp',
'AssemblyEditor.cpp',
'BaseEditor.cpp',
'EditorActivity.cpp',
'GABaseDefense.cpp',
'GABrainMatch.cpp',
'GAMetaAttack.cpp',
'GAScripted.cpp',
'GATutorial.cpp',
'GameActivity.cpp',
'GibEditor.cpp',
'MultiplayerGame.cpp',
'MultiplayerServerLobby.cpp',
'SceneEditor.cpp')
