sources += files('ActorEditor.cpp',
'AreaEditor.cpp',
'AssemblyEditor.cpp',
'BaseEditor.cpp',
'EditorActivity.cpp',
'GABaseDefense.cpp',
'GABrainMatch.cpp',
'GAScripted.cpp',
'GATutorial.cpp',
'GameActivity.cpp',
'GibEditor.cpp',
#'MultiplayerGame.cpp',
#'MultiplayerServerLobby.cpp',
'SceneEditor.cpp')
