ent_inc = include_directories('.')
ent_src = files('ACDropShip.cpp',
'ACRocket.cpp',
'ACrab.cpp',
'ACraft.cpp',
'ADSensor.cpp',
'ADoor.cpp',
'AEmitter.cpp',
'AHuman.cpp',
'Activity.cpp',
'Actor.cpp',
'Arm.cpp',
'AtomGroup.cpp',
'Attachable.cpp',
'BunkerAssembly.cpp',
'BunkerAssemblyScheme.cpp',
'Deployment.cpp',
'Emission.cpp',
'Gib.cpp',
'GlobalScript.cpp',
'HDFirearm.cpp',
'HeldDevice.cpp',
'Icon.cpp',
'Leg.cpp',
'LimbPath.cpp',
'Loadout.cpp',
'MOPixel.cpp',
'MOSParticle.cpp',
'MOSRotating.cpp',
'MOSprite.cpp',
'Magazine.cpp',
'Material.cpp',
'MetaPlayer.cpp',
'MetaSave.cpp',
'MovableObject.cpp',
'PEmitter.cpp',
'Round.cpp',
'SLTerrain.cpp',
'Scene.cpp',
'SceneLayer.cpp',
'SceneObject.cpp',
'SoundContainer.cpp',
'TDExplosive.cpp',
'TerrainDebris.cpp',
'TerrainObject.cpp',
'ThrownDevice.cpp',
'Turret.cpp')
