sources += files(
'ACDropShip.cpp',
'ACrab.cpp',
'ACraft.cpp',
'ACRocket.cpp',
'Activity.cpp',
'Actor.cpp',
'ADoor.cpp',
'ADSensor.cpp',
'AEmitter.cpp',
'AHuman.cpp',
'Arm.cpp',
'AtomGroup.cpp',
'Attachable.cpp',
'BunkerAssembly.cpp',
'BunkerAssemblyScheme.cpp',
'Deployment.cpp',
'Emission.cpp',
'Gib.cpp',
'GlobalScript.cpp',
'HDFirearm.cpp',
'HeldDevice.cpp',
'Icon.cpp',
'Leg.cpp',
'LimbPath.cpp',
'Loadout.cpp',
'Magazine.cpp',
'Material.cpp',
'MetaPlayer.cpp',
'MetaSave.cpp',
'MOPixel.cpp',
'MOSParticle.cpp',
'MOSprite.cpp',
'MOSRotating.cpp',
'MovableObject.cpp',
'PEmitter.cpp',
'Round.cpp',
'Scene.cpp',
'SceneLayer.cpp',
'SceneObject.cpp',
'SLTerrain.cpp',
'SoundContainer.cpp',
'SoundSet.cpp',
'TDExplosive.cpp',
'TerrainDebris.cpp',
'TerrainObject.cpp',
'ThrownDevice.cpp',
'Turret.cpp',
)
