sources += files(
'AreaEditorGUI.cpp',
'AreaPickerGUI.cpp',
'AssemblyEditorGUI.cpp',
'BuyMenuGUI.cpp',
'GibEditorGUI.cpp',
'InventoryMenuGUI.cpp',
'LoadingScreen.cpp',
'MainMenuGUI.cpp',
'MetagameGUI.cpp',
'ModManagerGUI.cpp',
'ObjectPickerGUI.cpp',
'PieMenuGUI.cpp',
'ScenarioActivityConfigGUI.cpp',
'ScenarioGUI.cpp',
'SceneEditorGUI.cpp',
'SettingsAudioGUI.cpp',
'SettingsGameplayGUI.cpp',
'SettingsGUI.cpp',
'SettingsInputGUI.cpp',
'SettingsInputMappingGUI.cpp',
'SettingsInputMappingWizardGUI.cpp',
'SettingsMiscGUI.cpp',
'SettingsVideoGUI.cpp',
'TitleScreen.cpp',
)
