sources += files(
'MicroPather/micropather.cpp',
'glad/gl.c',
'StandardIncludes.cpp',
'Atom.cpp',
'ContentFile.cpp',
'Controller.cpp',
'GenericSavedData.cpp',
'GraphicalPrimitive.cpp',
'Writer.cpp',
'Box.cpp',
'Entity.cpp',
'Vector.cpp',
'Reader.cpp',
'Color.cpp',
'InputScheme.cpp',
'RTETools.cpp',
'System.cpp',
'InputMapping.cpp',
'PathFinder.cpp',
'DataModule.cpp',
'Timer.cpp',
'RTEError.cpp',
'Matrix.cpp',
#'ScreenShader.cpp',
'Serializable.cpp',
'PieQuadrant.cpp',
#'GLCheck.cpp',
'SpatialPartitionGrid.cpp',
)
